// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<DropdownIndicator> should render correctly 1`] = `
.c0 {
  display: inline-block;
  width: 0;
  height: 0;
  border-left: 7px solid transparent;
  border-right: 7px solid transparent;
  border-top: 8px solid #5E6D7A;
  margin: 0 5px 0 calc(5px + 8px);
  -webkit-transform: scale(1);
  -ms-transform: scale(1);
  transform: scale(1);
}

<span
  className="c0"
/>
`;

exports[`<DropdownIndicator> should render correctly when it isDisabled 1`] = `
.c0 {
  display: inline-block;
  width: 0;
  height: 0;
  border-left: 7px solid transparent;
  border-right: 7px solid transparent;
  border-top: 8px solid #A4B8D1;
  margin: 0 5px 0 calc(5px + 8px);
  -webkit-transform: scale(1);
  -ms-transform: scale(1);
  transform: scale(1);
}

<span
  className="c0"
/>
`;

exports[`<DropdownIndicator> should render correctly when it left 1`] = `
.c0 {
  display: inline-block;
  width: 0;
  height: 0;
  border-left: 7px solid transparent;
  border-right: 7px solid transparent;
  border-top: 8px solid #A4B8D1;
  margin: 0 calc(5px + 8px) 0 5px;
  -webkit-transform: scale(1);
  -ms-transform: scale(1);
  transform: scale(1);
}

<span
  className="c0"
/>
`;
